CKAD/github/mock-test/annot.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
   app: ann-pod
  annotations:
   description: my desripton 
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
