CKAD/github/mock-test/box.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: temp
  name: temp
spec:
  containers:
  - image: busybox
    name: temp
    args:
    - bin/sh
    - -c
    - sleep 10
    - wget -O- foo:80
    - sleep 3600 
    - wget -O- foo:80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
