CKAD/github/mock-test/debugging1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: box
  name: box
spec:
  containers:
  - args:
    - ls
    - /notexist
    image: busybox
    name: box
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
