CKAD/github/mock-test/logging2.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: box
  name: box
spec:
  containers:
  - image: alpine
    name: box
    args:
    - bin/sh
    - -c
    - i=1; while true; do echo $i; if [ $i -lt 4 ]; then echo "number less than 4"; else echo "greater than 4"; fi; sleep 5; i=$((i+1)); done;
#    - i=1; echo $i; if [ $i -eq 1 ]; then  echo  hello; else echo bye; fi 
#    - i=0; c=0; if [ $i -eq $c ] then echo "m" else echo "n" fi 
#    command: [bin/sh, -c, 'i=0; c=0; if [ $i -eq $c ] then echo "m" else echo "n" fi;']
  restartPolicy: OnFailure
