CKAD/github/mock-test/nginx-sc1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
 # securityContext:
 #  runAsUser: 101
  containers:
  - image: nginx
    name: nginx
    securityContext:
     capabilities:
      add: ["NET_ADMIN", "SYS_TIME"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
