CKAD/github/mock-test/np.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: not-granted
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: not-granted
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: not-granted
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
