CKAD/github/mock-test/options.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
   app: option-pod
  name: option-pod
spec:
  containers:
  - image: nginx
    name: option-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
