CKAD/github/mock-test/probes1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
#    livenessProbe:
    readinessProbe:
     httpGet:
      path: /
      port: 80
     initialDelaySeconds: 10
     periodSeconds: 5
   #  exec:
   #   command: 
   #   - ls
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
