CKAD/github/mock-test/secret-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  #volumes:
 # - name: secretdata
 #   secret:
 #    secretName: mysecret2
  containers:
  - image: nginx
    name: nginx
    resources: {}
