CKAD/github/mock-test/two-box.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: two-box
  name: two-box
spec:
  volumes:
  - name: data
    emptyDir: {} 
  containers:
  - image: busybox
    name: first-box
    resources: {}
    args:
    - bin/sh
    - -c
    - sleep 3600
    volumeMounts:
    - name: data
      mountPath: '/etc/foo'
  - image: busybox
    name: second-box
    resources: {}
    volumeMounts:
    - name: data
      mountPath: '/etc/foo'
    args:
    - bin/sh
    - -c
    - sleep 3600

  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
