CKAD/github/mock-test/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: access-nginx
spec:
 podSelector:
  matchLabels:
   app: granted
 ingress:
 - from:
   - podSelector:
      matchLabels:
       role: developer
